--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@
   .main-block1__image-item {
     margin-left: 0;
     margin-top: 0;
+    width: 100%;
   }
 }
 
@@ -200,6 +201,11 @@
 .main-block2__image {
   margin-left: 70px;
   margin-top: 75px;
+}
+@media screen and (max-width: 768px) {
+  .main-block2__image {
+    margin-left: 0px;
+  }
 }
 .main-block2__page {
   margin-right: 70px;
@@ -260,7 +266,7 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 130%;
-  margin: 120px auto 0 485px;
+  text-align: center;
   color: #212353;
 }
 .main-block3__text {
@@ -321,6 +327,14 @@
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .main-block3__grid-LT__image-item {
+    display: none;
+  }
+  .main-block3__grid-LT__card-content {
+    margin-left: 15px;
+  }
+}
 .main-block3__grid-LT__card {
   z-index: -1;
 }
@@ -371,6 +385,11 @@
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .main-block3__grid-RT__image-item {
+    display: none;
+  }
+}
 .main-block3__grid-RT__card {
   z-index: -1;
 }
@@ -411,6 +430,11 @@
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 768px) {
+  .main-block3__grid-LB__image-item {
+    display: none;
+  }
+}
 .main-block3__grid-LB__card {
   z-index: -1;
 }
@@ -450,6 +474,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .main-block3__grid-RB__image-item {
+    display: none;
+  }
 }
 .main-block3__grid-RB__card {
   z-index: -1;
@@ -511,6 +540,16 @@
 .main-block4__card-design__imageR {
   width: 580px;
 }
+@media screen and (max-width: 768px) {
+  .main-block4__card-title {
+    margin-left: 100px;
+  }
+  .main-block4__card-grid {
+    -webkit-column-gap: 10px;
+       -moz-column-gap: 10px;
+            column-gap: 10px;
+  }
+}
 .main-block4__card-title {
   font-family: "Work Sans", sans-serif;
   font-style: normal;
@@ -521,19 +560,31 @@
   margin-left: 444px;
   color: #212353;
 }
-@media screen and (max-width: 768px) {
-  .main-block4__card-grid {
-    -ms-grid-columns: 100%;
-    grid-template-columns: 100%;
-  }
-}
 .main-block4__card-grid {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 100px 1fr;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 100px;
+  -webkit-column-gap: 100px;
+     -moz-column-gap: 100px;
+          column-gap: 100px;
   margin-top: 80px;
+}
+@media screen and (max-width: 768px) {
+  .main-block4__card-grid__left {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 0px;
+  }
+  .main-block4__card-grid__right {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-right: 0px;
+  }
 }
 .main-block4__card-grid__page-title {
   font-family: "Montserrat", sans-serif;
@@ -724,6 +775,26 @@
   margin-bottom: 100px;
   height: 240px;
 }
+@media screen and (max-width: 768px) {
+  .footer-block__main {
+    margin-bottom: 570px;
+  }
+  .footer-block__main-LogoNav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-block__main-LogoNav__navigation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-column-gap: 10px;
+       -moz-column-gap: 10px;
+            column-gap: 10px;
+  }
+}
 .footer-block__main-LogoNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -735,7 +806,9 @@
   width: 300px;
 }
 .footer-block__main-LogoNav__contacts {
-  width: max-width;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   margin-right: 200px;
 }
 .footer-block__main-LogoNav__contacts-logo {
@@ -813,7 +886,9 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  gap: 168px;
+  -webkit-column-gap: 168px;
+     -moz-column-gap: 168px;
+          column-gap: 168px;
 }
 .footer-block__main-LogoNav__navigation__list-item {
   font-family: "Montserrat", sans-serif;
