--- a/css/style.scss
+++ b/css/style.scss
@@ -69,7 +69,7 @@
         position: fixed;
         z-index: 7;
         top: 36px;
-        right: 700px;
+        right: 450px;
       }
 
       &__navigation.open &__navigation-list {
@@ -369,7 +369,7 @@
 
     grid-gap: 30px;
     margin-top: 80px;
-
+    
    // flex-basis: 25%;
   }
 
@@ -391,7 +391,7 @@
     }
 
     &__card-content {
-      margin-left: 15px;
+      max-width: 180%;
     }
   }  
 
@@ -443,6 +443,12 @@
       border-radius: 50px;
      
     }
+
+    // @media screen and (max-width: 768px) {
+    //   &__grid-LT {
+    //     margin-left: 15px;
+    //   }
+    // } 
   }
 
 
@@ -639,15 +645,6 @@
     }
   }
 
-@media  screen and (max-width: 768px) {
-  &__card-title {
-    margin-left: 100px;
-  }
-
-  &__card-grid {
-    column-gap: 10px;
-  }
-}
 
   &__card-title {
     font-family: 'Work Sans', sans-serif;
@@ -669,17 +666,16 @@
 
     column-gap: 100px;
     margin-top: 80px;
+    margin-bottom: 80px;
 
    
     @media screen and (max-width: 768px) {
       &__left {
         flex-direction: column;
-        margin-left: 0px;
       }
 
       &__right {
         flex-direction: column;
-        margin-right: 0px;
       }
       
     }    
@@ -764,7 +760,28 @@
       }
     }
   }
+  @media  screen and (max-width: 768px) {
+    &__card-title {
+      margin-left: 70px;
+    }
+  
+    &__card-grid {
+      column-gap: 10px;
+
+      &__left {
+        margin-left: 15px;
+      }
+
+      &__right {
+        margin-left: 0px;
+      }
+    }
+
+   
+  }
+  
 }
+
 
 
 
@@ -889,6 +906,12 @@
 
       &__item2-inner:hover {
         color: #FFFFFF;
+      }
+    }
+    @media screen and (max-width: 768px) {
+      &__button {
+        flex-direction: column;
+        column-gap: 30px;
       }
     }
   }
